# Meshtalk

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: architecture.md  protocol.md
include/: dedup.h  discovery.h  meshtalk.h  message.h  net.h  peer.h  persistence.h  presence.h  room.h  security.h  ui.h
prebuilt/: meshtalk-darwin-arm64
prebuilt/v1.0.1/: SHA256SUMS.txt  meshtalk-linux-arm64  meshtalk-linux-x64
src/: common.h  main.c  net_common.c  net_unix.c  net_win.c
src/crypto/: crypto.c  crypto.h
src/discovery/: discovery.c  discovery.h
src/message/: message.c  message.h
src/net/: net.h  net_posix.c  net_win.c
src/peer/: peer.c  peer.h
src/persistence/: storage.c  storage.h
src/room/: room.c  room.h
src/tui/: tui.h  tui_posix.c  tui_win.c
src/util/: json.c  json.h  uuid.c  uuid.h
tests/: CMakeLists.txt  test_discovery.c  test_message.c  test_net.c  test_peer.c  test_simulator.c
